crates/hwp-core/tests/snapshots/snapshot_tests__facename_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko</span><span style="font-size: 10.0pt; font-family: '한컴바탕'">한컴바탕</span><span style="font-size: 10.0pt; font-family: '바탕'">en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko</span><span style="font-size: 10.0pt; font-family: '한양신명조'">한양신명조</span><span style="font-size: 10.0pt; font-family: '바탕'">en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko</span><span style="font-size: 10.0pt; font-family: '휴먼명조'">휴먼명조</span><span style="font-size: 10.0pt; font-family: '바탕'">en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en</span><span style="font-size: 10.0pt; font-family: '바탕'">Arial</span><span style="font-size: 10.0pt; font-family: '바탕'">cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en</span><span style="font-size: 10.0pt; font-family: '바탕'">ComicSansMS</span><span style="font-size: 10.0pt; font-family: '바탕'">cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en</span><span style="font-size: 10.0pt; font-family: '바탕'">CourierNew</span><span style="font-size: 10.0pt; font-family: '바탕'">cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en</span><span style="font-size: 10.0pt; font-family: '바탕'">DejaVuSerif</span><span style="font-size: 10.0pt; font-family: '바탕'">cn바탕jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en바탕cn</span><span style="font-size: 10.0pt; font-family: '바탕'">SimHei</span><span style="font-size: 10.0pt; font-family: '바탕'">jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en바탕cn</span><span style="font-size: 10.0pt; font-family: '바탕'">SimSun</span><span style="font-size: 10.0pt; font-family: '바탕'">jp바탕other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en바탕cn바탕jp</span><span style="font-size: 10.0pt; font-family: '바탕'">MSGothic</span><span style="font-size: 10.0pt; font-family: '바탕'">other바탕symbol바탕user바탕</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">ko바탕en바탕cn바탕jp</span><span style="font-size: 10.0pt; font-family: '바탕'">MSMinCho</span><span style="font-size: 10.0pt; font-family: '바탕'">other바탕symbol바탕user바탕</span></p>
</div>
