crates/hwp-core/tests/snapshots/snapshot_tests__facename_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
ko바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko한컴바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko한양신명조en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko휴먼명조en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enArialcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enComicSansMScn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enCourierNewcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enDejaVuSerifcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕en바탕cnSimHeijp바탕other바탕symbol바탕user바탕

ko바탕en바탕cnSimSunjp바탕other바탕symbol바탕user바탕

ko바탕en바탕cn바탕jpMSGothicother바탕symbol바탕user바탕

ko바탕en바탕cn바탕jpMSMinChoother바탕symbol바탕user바탕
