crates/hwp-core/tests/snapshots/snapshot_tests__footnote_endnote_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
각주참조[^e1][^e2]

미주참조



## 각주



[^1]: 각주입니다.

[^2]: 각주 두 번째입니다.



## 미주



[^e1]: 미주입니다.

[^e2]: 미주 두 번째입니다.
